[package]
name = "kmerge"
version = "0.1.0"
authors = ["Dylan MacKenzie <ecstaticmorse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "merge2_uniq"
harness = false
